@@ -22,6 +22,7 @@ import static io.restassured.RestAssured.given;
 import static org.apache.camel.Exchange.CONTENT_TYPE;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
 import java.net.URI;
@@ -100,11 +101,27 @@ public class AnalysisV3Test extends AbstractAnalysisTest {
             Collections.emptyMap(),
             Constants.MAVEN_PKG_MANAGER),
         Arguments.of(
-            Map.of(Constants.SNYK_PROVIDER, 200, Constants.OSS_INDEX_PROVIDER, 401),
+            Map.of(Constants.OSV_NVD_PROVIDER, 200),
+            Collections.emptyMap(),
+            Constants.MAVEN_PKG_MANAGER),
+        Arguments.of(
+            Map.of(
+                Constants.SNYK_PROVIDER,
+                200,
+                Constants.OSS_INDEX_PROVIDER,
+                401,
+                Constants.OSV_NVD_PROVIDER,
+                200),
             Map.of(Constants.SNYK_TOKEN_HEADER, OK_TOKEN),
             Constants.MAVEN_PKG_MANAGER),
         Arguments.of(
-            Map.of(Constants.SNYK_PROVIDER, 200, Constants.OSS_INDEX_PROVIDER, 200),
+            Map.of(
+                Constants.SNYK_PROVIDER,
+                200,
+                Constants.OSS_INDEX_PROVIDER,
+                200,
+                Constants.OSV_NVD_PROVIDER,
+                200),
             Map.of(
                 Constants.OSS_INDEX_USER_HEADER,
                 OK_USER,
@@ -112,7 +129,13 @@ public class AnalysisV3Test extends AbstractAnalysisTest {
                 OK_TOKEN),
             Constants.MAVEN_PKG_MANAGER),
         Arguments.of(
-            Map.of(Constants.SNYK_PROVIDER, 200, Constants.OSS_INDEX_PROVIDER, 200),
+            Map.of(
+                Constants.SNYK_PROVIDER,
+                200,
+                Constants.OSS_INDEX_PROVIDER,
+                200,
+                Constants.OSV_NVD_PROVIDER,
+                200),
             Map.of(
                 Constants.SNYK_TOKEN_HEADER,
                 OK_TOKEN,
@@ -122,19 +145,43 @@ public class AnalysisV3Test extends AbstractAnalysisTest {
                 OK_TOKEN),
             Constants.MAVEN_PKG_MANAGER),
         Arguments.of(
-            Map.of(Constants.SNYK_PROVIDER, 200, Constants.OSS_INDEX_PROVIDER, 401),
+            Map.of(
+                Constants.SNYK_PROVIDER,
+                200,
+                Constants.OSS_INDEX_PROVIDER,
+                401,
+                Constants.OSV_NVD_PROVIDER,
+                200),
             Collections.emptyMap(),
             Constants.MAVEN_PKG_MANAGER),
         Arguments.of(
-            Map.of(Constants.SNYK_PROVIDER, 200, Constants.OSS_INDEX_PROVIDER, 401),
+            Map.of(
+                Constants.SNYK_PROVIDER,
+                200,
+                Constants.OSS_INDEX_PROVIDER,
+                401,
+                Constants.OSV_NVD_PROVIDER,
+                200),
             Collections.emptyMap(),
             Constants.NPM_PKG_MANAGER),
         Arguments.of(
-            Map.of(Constants.SNYK_PROVIDER, 200, Constants.OSS_INDEX_PROVIDER, 401),
+            Map.of(
+                Constants.SNYK_PROVIDER,
+                200,
+                Constants.OSS_INDEX_PROVIDER,
+                401,
+                Constants.OSV_NVD_PROVIDER,
+                200),
             Collections.emptyMap(),
             Constants.GOLANG_PKG_MANAGER),
         Arguments.of(
-            Map.of(Constants.SNYK_PROVIDER, 200, Constants.OSS_INDEX_PROVIDER, 401),
+            Map.of(
+                Constants.SNYK_PROVIDER,
+                200,
+                Constants.OSS_INDEX_PROVIDER,
+                401,
+                Constants.OSV_NVD_PROVIDER,
+                200),
             Collections.emptyMap(),
             Constants.PYPI_PKG_MANAGER));
   }
@@ -212,7 +259,7 @@ public class AnalysisV3Test extends AbstractAnalysisTest {
             .body()
             .as(AnalysisReport.class);
 
-    assertEquals(3, report.getSummary().getProviderStatuses().size());
+    assertEquals(4, report.getSummary().getProviderStatuses().size());
     var status =
         report.getSummary().getProviderStatuses().stream()
             .filter(ps -> ps.getProvider().equals(Constants.SNYK_PROVIDER))
@@ -228,6 +275,14 @@ public class AnalysisV3Test extends AbstractAnalysisTest {
             .get();
     assertFalse(status.getOk());
     assertEquals(Response.Status.UNAUTHORIZED.getStatusCode(), status.getStatus());
+
+    status =
+        report.getSummary().getProviderStatuses().stream()
+            .filter(ps -> ps.getProvider().equals(Constants.OSV_NVD_PROVIDER))
+            .findFirst()
+            .get();
+    assertTrue(status.getOk());
+    assertEquals(Response.Status.OK.getStatusCode(), status.getStatus());
 
     verifySnykRequest(INVALID_TOKEN);
   }
@@ -252,7 +307,7 @@ public class AnalysisV3Test extends AbstractAnalysisTest {
             .body()
             .as(AnalysisReport.class);
 
-    assertEquals(3, report.getSummary().getProviderStatuses().size());
+    assertEquals(4, report.getSummary().getProviderStatuses().size());
     var status =
         report.getSummary().getProviderStatuses().stream()
             .filter(ps -> ps.getProvider().equals(Constants.SNYK_PROVIDER))
@@ -268,6 +323,14 @@ public class AnalysisV3Test extends AbstractAnalysisTest {
             .get();
     assertFalse(status.getOk());
     assertEquals(Response.Status.UNAUTHORIZED.getStatusCode(), status.getStatus());
+
+    status =
+        report.getSummary().getProviderStatuses().stream()
+            .filter(ps -> ps.getProvider().equals(Constants.OSV_NVD_PROVIDER))
+            .findFirst()
+            .get();
+    assertTrue(status.getOk());
+    assertEquals(Response.Status.OK.getStatusCode(), status.getStatus());
     verifySnykRequest(UNAUTH_TOKEN);
   }
 
